--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,22 @@
     ],
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "esModuleInterop": true,
+    "importHelpers": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "UMD",
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "skipLibCheck": true,
+    "noFallthroughCasesInSwitch": true,
     "moduleResolution": "Node",
     "outDir": "./dist" /* Redirect output structure to the directory. */,
     "strict": true,
     "target": "ES2020",
   },
-  "include": ["./src/**/*", "test/server.ts"],
-  "exclude": ["test", "./src/**/*.spec.ts", "./src/**/*.mock.ts", "./src/**/*.handlers.ts"]
+  "include": ["src/*.ts"],
+  "exclude": ["test", "demo", "node_modules", "./dist/**/*", "./types/**/*"]
 }
