--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig",
   "compilerOptions": {
-    "module": "UMD",
-    "outDir": "./dist" /* Redirect output structure to the directory. */
+    "module": "CommonJS",
+    "outDir": "./dist/cjs" /* Redirect output structure to the directory. */
   }
 }
