--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
   "author": "Alan <alanseveryzoer@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@dydxprotocol/v3-client": "^1.8.2",
     "@imtbl/imx-sdk": "^1.5.0",
-    "@loopring-web/loopring-sdk": "3.5.12",
+    "@loopring-web/loopring-sdk": "^3.8.12",
+    "@truffle/hdwallet-provider": "^2.1.15",
     "axios": "^1.6.2",
     "bignumber.js": "^9.1.2",
     "ethers-6": "npm:ethers@^6.8.1",
-    "starknet": "5.19.5",
+    "starknet": "^5.24.5",
     "web3": "^1.7.4",
     "zksync": "^0.11.3"
   },
@@ -48,7 +48,7 @@
     "@types/web3": "^1.2.2",
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
-    "vitest": "^0.34.6",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^0.34.6"
   }
 }
