--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "postinstall":"patch-package",
     "test": "vitest --run --dangerouslyIgnoreUnhandledErrors",
     "build": "tsc --project ./tsconfig.json && tsc --project ./tsconfig.cjs.json"
   },
@@ -34,7 +35,7 @@
   "license": "ISC",
   "dependencies": {
     "@imtbl/imx-sdk": "^1.5.0",
-    "@loopring-web/loopring-sdk": "^3.8.12",
+    "@loopring-web/loopring-sdk": "3.5.12",
     "@truffle/hdwallet-provider": "^2.1.15",
     "axios": "^1.6.2",
     "bignumber.js": "^9.1.2",
@@ -48,6 +49,7 @@
     "@types/web3": "^1.2.2",
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
+    "patch-package": "^8.0.0",
     "typescript": "^5.3.3",
     "vitest": "^0.34.6"
   }
