--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "orbiter-sdk",
-  "version": "1.1.0",
+  "name": "orbiter-bridge-sdk",
+  "version": "1.1.8",
   "description": "Orbiter cross rollup SDK",
   "main": "./dist/cjs/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "postinstall": "patch-package",
     "test": "vitest --run --dangerouslyIgnoreUnhandledErrors",
     "build": "tsc --project ./tsconfig.json && tsc --project ./tsconfig.cjs.json"
   },
@@ -49,7 +48,6 @@
     "@types/web3": "^1.2.2",
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
-    "patch-package": "^8.0.0",
     "typescript": "^5.3.3",
     "vitest": "^0.34.6"
   }
