--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
-// input your evm private key to run test
 PRIVATE_KEY = ""
 
-// input your starknet private key
 STARKNET_PRIVATE_KEY = ""
 
 STARKNET_ADDRESS = ""
+
+GOERLI_RPC_URL = "https://eth-goerli.g.alchemy.com/v2/xxxxxx"
+
+OP_GOERLI_RPC_URL = "https://opt-goerli.g.alchemy.com/v2/xxxxxx"
+
+SN_GOERLI_RPC_URL = "https://starknet-goerli.g.alchemy.com/v2/xxxxxx"
