--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orbiter-bridge-sdk",
-  "version": "1.1.10",
+  "version": "1.1.14",
   "description": "Orbiter cross rollup SDK",
   "main": "./dist/cjs/index.js",
   "module": "./dist/index.js",
@@ -37,6 +37,7 @@
     "@truffle/hdwallet-provider": "^2.1.15",
     "axios": "^1.6.2",
     "bignumber.js": "^9.1.2",
+    "ethers": "5.7.2",
     "ethers-6": "npm:ethers@^6.8.1",
     "loopring-fix-web-sdk": "^1.0.1",
     "starknet": "^5.24.5",
