--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "orbiter-bridge-sdk",
-  "version": "1.1.26",
+  "version": "1.1.37",
   "description": "Orbiter cross rollup SDK",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/cjs/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "test": "vitest --run --dangerouslyIgnoreUnhandledErrors",
