--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orbiter-bridge-sdk",
-  "version": "1.1.37",
+  "version": "1.1.38",
   "description": "Orbiter cross rollup SDK",
   "main": "./dist/index.js",
   "module": "./dist/cjs/index.js",
@@ -41,8 +41,7 @@
     "ethers-6": "npm:ethers@^6.8.1",
     "loopring-fix-web-sdk": "^1.0.1",
     "starknet": "^5.24.5",
-    "web3": "^1.7.4",
-    "zksync": "^0.13.1"
+    "web3": "^1.7.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
