--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "orbiter-bridge-sdk",
-  "version": "1.1.42",
+  "name": "@orbiter-finance/bridge-sdk",
+  "version": "0.0.1",
   "description": "Orbiter cross rollup SDK",
   "author": "Alan <alanseveryzoer@gmail.com>",
   "license": "ISC",
