--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@orbiter-finance/bridge-sdk",
-  "version": "0.0.1",
+  "name": "rubic-orbiter-sdk",
+  "version": "0.3.0",
   "description": "Orbiter cross rollup SDK",
   "author": "Alan <alanseveryzoer@gmail.com>",
   "license": "ISC",
@@ -43,27 +43,28 @@
     "url": "https://github.com/Orbiter-Finance/OB_BridgeSDK/issues"
   },
   "dependencies": {
-    "@imtbl/imx-sdk": "^1.5.0",
+    "@imtbl/imx-sdk": "^3.5.0",
     "@truffle/hdwallet-provider": "^2.1.15",
-    "axios": "^1.6.2",
+    "axios": "^1.6.7",
     "bignumber.js": "^9.1.2",
-    "ethers": "5.7.2",
-    "ethers-6": "npm:ethers@^6.8.1",
+    "ethers": "6.10.0",
+    "ethers-6": "npm:ethers@^6.10.0",
     "loopring-fix-web-sdk": "^1.0.1",
+    "npm-check-updates": "^16.14.14",
     "starknet": "^5.24.5",
-    "web3": "^1.7.4"
+    "web3": "^4.4.0"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.5",
     "@types/lodash": "^4.14.202",
     "@types/rollup": "^0.54.0",
     "@types/web3": "^1.2.2",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.1",
     "lodash": "^4.17.21",
     "rollup": "^4.9.6",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.3.3",
-    "vitest": "^0.34.6"
+    "vitest": "^1.2.2"
   }
 }
